# cascii

./: .gitignore  Cargo.toml  README.md  TODO.MD  casci-demo.sh  install.sh  package.json  test.sh
.github/workflows/: rust.md
public/: index.html
public/default/: frame_0002.txt  frame_0004.txt  frame_0012.txt  frame_0016.txt  frame_0022.txt  frame_0028.txt  frame_0029.txt  frame_0030.txt  frame_0031.txt  frame_0036.txt  frame_0039.txt  frame_0042.txt  frame_0061.txt  frame_0062.txt  frame_0079.txt  frame_0083.txt  frame_0094.txt  frame_0096.txt  frame_0099.txt  frame_0100.txt  frame_0102.txt  frame_0104.txt  frame_0110.txt  frame_0112.txt  frame_0114.txt
public/large/: frame_0007.txt  frame_0010.txt  frame_0025.txt  frame_0040.txt  frame_0046.txt  frame_0053.txt  frame_0070.txt  frame_0077.txt  frame_0085.txt  frame_0092.txt  frame_0106.txt  frame_0119.txt  frame_0123.txt  frame_0145.txt  frame_0154.txt  frame_0163.txt  frame_0166.txt  frame_0181.txt  frame_0188.txt  frame_0210.txt  frame_0216.txt  frame_0231.txt  frame_0251.txt  frame_0254.txt  frame_0262.txt  frame_0264.txt  frame_0300.txt
public/small/: frame_0012.txt  frame_0016.txt  frame_0017.txt  frame_0020.txt  frame_0022.txt  frame_0023.txt  frame_0024.txt  frame_0025.txt  frame_0029.txt  frame_0034.txt  frame_0039.txt  frame_0042.txt  frame_0046.txt  frame_0052.txt  frame_0063.txt  frame_0065.txt  frame_0070.txt  frame_0071.txt  frame_0072.txt  frame_0075.txt  frame_0078.txt  frame_0081.txt  frame_0082.txt  frame_0083.txt  frame_0084.txt  (+12 more)
src/: App.js  main.rs
viewer/: package-lock.json
(+312 files in other folders)
