[package]
name = "ascii-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
walkdir = "2.5"

