[package]
name = "casci"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "casci"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
image = "0.24.7"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
walkdir = "2.4.0"
unicode-segmentation = "1.10.1"

[profile.release]
