[package]
name = "cascii"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cascii"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
walkdir = "2.5"
dirs = "5"
